/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.projetochallenge;

/**
 *
 * @author gui
 */
import java.util.Date;
import java.util.List;

// Classe principal do aplicativo
class AppRedeAncora {
    private String nomeApp;
    private String versao;

    public void iniciarApp() {
        System.out.println("App iniciado");
    }

    public void fecharApp() {
        System.out.println("App fechado");
    }
}