/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.projetochallenge;

import java.util.List;

/**
 *
 * @author gui
 */
class Loja {
    private int idLoja;
    private String nome;
    private String endereco;
    private String telefone;

    public List<Peca> listarPecasDisponiveis() {
        System.out.println("Listando peças disponíveis");
        return null; // Simulação
    }

    // Getters e Setters omitidos para simplicidade
}