/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.projetochallenge;

import java.util.Date;

/**
 *
 * @author gui
 */
class Pedido {
    private int idPedido;
    private Date dataCriacao;
    private String status;

    public void atualizarStatus(String novoStatus) {
        this.status = novoStatus;
        System.out.println("Status atualizado para: " + novoStatus);
    }

    // Getters e Setters omitidos para simplicidade
}